# congkak-solver

./: .gitignore  Cargo.toml  README.md  RULES.md  pyproject.toml
.claude/: settings.local.json
congkak-core/: Cargo.toml
congkak-core/python/: congkak_core.pyi
congkak-core/src/: board.rs  lib.rs  moves.rs  rules.rs  simulation.rs
src/congkak/: __init__.py  cli.py  congkak_core.pyi
src/congkak/gui/: __init__.py  animation.py  app.py
src/congkak/solver/: __init__.py  evaluation.py  minimax.py  transposition.py
tests/: test_board.py  test_rules.py  test_solver.py
